--- a/try_Statistical_Consulting.Rmd
+++ b/try_Statistical_Consulting.Rmd
@@ -11,7 +11,8 @@ options(scipen=5, digits = 5)
 
 # Read the df file:
 ```{r}
-dir <- "C:/Users/Merav/Documents/GitHub/Statistics-Workshop/atopic_comorbidities_first_second_year_1.11.22.xlsx"
+#dir <- "C:/Users/Merav/Documents/GitHub/Statistics-Workshop/atopic_comorbidities_first_second_year_1.11.22.xlsx"
+dir <- "C:/Users/edena/Documents/GitHub/Statistics-Project/atopic_comorbidities_first_second_year_1.11.22.xlsx"
 df <- read_excel(dir, sheet = 1)
 df <- df %>% mutate(DOB = as.Date(DOB)) 
 
@@ -24,15 +25,19 @@ df <- df[-which(colnames(df) %in% not_relevant)]
 df <- df %>% filter(month_survey_complete == 2)
 
 
+
 # add binary columns 
 df$family_Atopic_diseases_sum <- rowSums(df[,15:50])
 df$mother_Atopic_diseases_sum <- rowSums(df[,15:20])
 df$father_Atopic_diseases_sum <- rowSums(df[,21:26])
 df$sibling_Atopic_diseases_sum <- rowSums(df[,27:50])
-df <- df %>% mutate(family_Atopic_diseases = ifelse(family_Atopic_diseases_sum >0,1,0), 
-                    mother_Atopic_diseases = ifelse(mother_Atopic_diseases_sum>0,1,0), 
-                    father_Atopic_diseases = ifelse(father_Atopic_diseases_sum > 0, 1,0), 
-                    sibling_Atopic_diseases = ifelse(sibling_Atopic_diseases_sum > 0 ,1, 0)) %>% select(-c(family_Atopic_diseases_sum, mother_Atopic_diseases_sum, father_Atopic_diseases_sum, sibling_Atopic_diseases_sum))
+df <- df %>% mutate(family_Atopic_diseases = ifelse(family_Atopic_diseases_sum >0,1,0),
+                    mother_Atopic_diseases = ifelse(mother_Atopic_diseases_sum>0,1,0),
+                    father_Atopic_diseases = ifelse(father_Atopic_diseases_sum > 0, 1,0),
+                    sibling_Atopic_diseases = ifelse(sibling_Atopic_diseases_sum > 0 ,1, 0)) #%>% select(-c(family_Atopic_diseases_sum, mother_Atopic_diseases_sum, father_Atopic_diseases_sum, sibling_Atopic_diseases_sum))
+
+remove_columns = colnames(df)[51:86]
+df <- df[,-c(51:86)]
 ```
 
 
@@ -47,6 +52,7 @@ df[which(df$mother_year_birth> 2000),] # to take off ??
 
 # Change the binary variables to 0/1
 df$gender[df$gender == 2] <- 0
+df$`Jew/Arab`[df$`Jew/Arab` == 2] <- 0
 df$food_allergy_24_month[df$food_allergy_24_month == 2] <- 0
 df$inhalation_24_month[df$inhalation_24_month == 2] <- 0
 df$prevention_therapy[df$prevention_therapy == 2] <- 0
@@ -56,47 +62,20 @@ df$ABX_treatment_24_months[df$ABX_treatment_24_months == 2] <- 0
 df$hospitalization_24_months[df$hospitalization_24_months == 2] <- 0
 df$chronic_disease_24[df$chronic_disease_24 == 2] <- 0
 
-df$`12_month_number_of_inhalations`[is.na(df$`12_month_number_of_inhalations`)] <- 0
-df$`12_month_FA_type_allergy`[is.na(df$`12_month_FA_type_allergy`)] <- 0
-df$number_of_ABX_first_year[is.na(df$number_of_ABX_first_year)] <- 0
-df$number_inhalation[is.na(df$number_inhalation)] <- 0
-df$prevention_therapy[is.na(df$prevention_therapy)] <- 0
-df$number_of_ABX_first_year[is.na(df$number_of_ABX_first_year)] <- 0
-df$number_steroid_treat[is.na(df$number_steroid_treat)] <- 0
-df$number_ABX_treatment_24_months[is.na(df$number_ABX_treatment_24_months)] <- 0
+# df$`12_month_number_of_inhalations`[is.na(df$`12_month_number_of_inhalations`)] <- 0
+# df$`12_month_FA_type_allergy`[is.na(df$`12_month_FA_type_allergy`)] <- 0
+# df$number_of_ABX_first_year[is.na(df$number_of_ABX_first_year)] <- 0
+# df$number_inhalation[is.na(df$number_inhalation)] <- 0
+# df$prevention_therapy[is.na(df$prevention_therapy)] <- 0
+# df$number_of_ABX_first_year[is.na(df$number_of_ABX_first_year)] <- 0
+# df$number_steroid_treat[is.na(df$number_steroid_treat)] <- 0
+# df$number_ABX_treatment_24_months[is.na(df$number_ABX_treatment_24_months)] <- 0
 ```
 
 
 # Summary of the data:
 ```{r}
 attach(df)
-
-# Check the freq of each category 
-table(`Jew/Arab`)
-table(gender)
-table(`Study group (MARCH 2020)`) # 0=Before march 2020, 1=After
-table(study_group_COMEET) # 1= only breastfeeding, 2=breastfeeding and CMF, 3=only CMF 
-table(mother_education) # 1=high school, 2=post graduate, 3=Academic
-table(number_of_children)
-table(preganancy_number)
-table(type_of_pregnancy) #1=spontaneous, 2=IVF
-table(`mode of delivery`) #1=Vaginal, 2=Elelctive cessarian section, 3=Emergency cessarian section
-table(`type of allergy`) # number of allergy 
-table(inhalation_24_month)
-table(inhalation_24_month)
-
-#type of food:
-table(Egg)
-table(Peanuts)
-table(Almonds)
-table(`Tree nuts`)
-table(Milk)
-table(Soy)
-table(Sesame)
-table(Fish)
-table(`Other food`)
-table(HRAD_first_year)
-table(AD_first_year)
 
 # Show the distribution of some variables
 hist(mother_year_birth)
@@ -114,8 +93,9 @@ tablelist
 ```
 # How many NA are in each column
 ```{r}
-NA_count <- as.data.frame(t(df %>% summarise_all(funs(sum(is.na(.)))))) %>% dplyr::rename("the NA number" = 1)
-NA_count
+NA_count <- as.data.frame(t(df %>% summarise_all(funs(sum(is.na(.)))))) %>% dplyr::rename("the NA number" = 1) 
+NA_count <- NA_count %>% mutate(Name = rownames(NA_count))
+NA_column = NA_count %>% filter(`the NA number` >0) %>% arrange(`the NA number`)
 ```
 # Run some logistic regression on some variables:
 ```{r}
