--- a/try_Statistical_Consulting.Rmd
+++ b/try_Statistical_Consulting.Rmd
@@ -14,8 +14,8 @@ options(scipen=5, digits = 5)
 ```{r}
 # Reading the file:
 # dir <- "C:/Users/Merav/Documents/GitHub/Statistics-Project/atopic_comorbidities_first_second_year_3.1.23.xlsx"
-dir <- "C:/Users/edena/Documents/GitHub/Statistics-Project/atopic_comorbidities_first_second_year_3.1.23.xlsx"
-#dir<-"C:/Users/Shahar/Documents/GitHub/Statistics-Project/atopic_comorbidities_first_second_year_3.1.23.xlsx"
+# dir <- "C:/Users/edena/Documents/GitHub/Statistics-Project/atopic_comorbidities_first_second_year_3.1.23.xlsx"
+dir<-"C:/Users/Shahar/Documents/GitHub/Statistics-Project/atopic_comorbidities_first_second_year_3.1.23.xlsx"
     
 df <- read_excel(dir, sheet = 1)
 df <- df %>% mutate(DOB = as.Date(DOB)) 
@@ -99,11 +99,7 @@ df <- df %>% mutate(covid_time = ifelse(DOB < group1, 1, ifelse(DOB < group2, 2,
 table(df$covid_time)
 
 # at this moment there is no sutible data from group 4 - post corona 
-
-# mean(df[which(df$covid_time == 1),]$is_atopic_second_year, na.rm = T)
-# mean(df[which(df$covid_time == 2),]$is_atopic_second_year, na.rm = T)
-# mean(df[which(df$covid_time == 3),]$is_atopic_second_year, na.rm = T)
-
+attach(df)
 ```
 # Summary of the data:
 
@@ -115,14 +111,6 @@ glimpse(df)
 
 # One strange observation- gave birth at 12??
 df[which(df$mother_year_birth> 2000),] # to take off ?? 
-```
-
-```{r}
-attach(df) ##מה זה? -- יוצר משתנה עבור כל עמודה בפנה עצמה בלי קשר לדאטה
-
-# Show the distribution of some variables
-hist(mother_year_birth)
-hist(SES) #socio-economic status
 ```
 
 ```{r}
@@ -306,6 +294,8 @@ ggplot(data=df%>% mutate(mother_age = 2023 - mother_year_birth), aes(x=as.factor
 
 ggplot(data=df%>% mutate(mother_age = 2023 - mother_year_birth), aes(x=as.factor(inhalation_24_month), y=mother_age)) + 
   geom_boxplot()
+
+
 ```
 
 
@@ -352,15 +342,58 @@ ggplot(plot_df_8,aes(x=as.factor(chronic_disease), y= mean, fill = as.factor(num
 ```
 
 ```{r}
-explanatory_variables <- df %>% select(mother_year_birth,SES, Jew/Arab,DOB, gender, mother_education, number_of_children, preganancy_number,type_of_pregnancy,Allergy_total,mother_asthma,mother_atopic_dermatitis,mother_Allergic_rhinitis,mother_food_allergy,father_asthma,father_atopic_dermatitis,father_Allergic_rhinitis,father_food_allergy,sibling1_asthma,sibling1_atopic_dermatitis,sibling1_Allergic_rhinitis,sibling1_food_allergy,sibling2_asthma,sibling2_atopic_dermatitis,sibling2_Allergic_rhinitis,sibling2_food_allergy,sibling3_asthma,sibling3_atopic_dermatitis,sibling3_Allergic_rhinitis,sibling3_food_allergy,sibling4_asthma,sibling4_atopic_dermatitis,sibling4_Allergic_rhinitis,sibling4_food_allergy,HRAD_first_year,AD_first_year,FA_first_year,ABX_fisrt_year, number_of_ABX_first_year,vaccine_12mo,nursing_setup_at_12mo,daycare_24month,vaccines_24month,food_allergy_24_month,inhalation_24_month,number_inhalation,prevention_therapy,AD_24_month,AD_treatment_24_month,steroids_treatment24,number_steroid_treat,chronic_rhinitis_24_month,ABX_treatment_24_months,number_ABX_treatment_24_months,hospitalization_24_months,chronic_disease_24,month_survey_complete,family_Atopic_diseases_sum,mother_Atopic_diseases_sum,father_Atopic_diseases_sum,sibling_Atopic_diseases_sum, family_Atopic_diseases,mother_Atopic_diseases,father_Atopic_diseases,sibling_Atopic_diseases,is_atopic_first_year,is_atopic_second_year,covid_time)
+explanatory_variables <- df %>% select(mother_year_birth,SES, `Jew/Arab`,DOB, gender, mother_education, number_of_children, preganancy_number,type_of_pregnancy,Allergy_total,mother_asthma,mother_atopic_dermatitis,mother_Allergic_rhinitis,mother_food_allergy,father_asthma,father_atopic_dermatitis,father_Allergic_rhinitis,father_food_allergy,sibling1_asthma,sibling1_atopic_dermatitis,sibling1_Allergic_rhinitis,sibling1_food_allergy,sibling2_asthma,sibling2_atopic_dermatitis,sibling2_Allergic_rhinitis,sibling2_food_allergy,sibling3_asthma,sibling3_atopic_dermatitis,sibling3_Allergic_rhinitis,sibling3_food_allergy,sibling4_asthma,sibling4_atopic_dermatitis,sibling4_Allergic_rhinitis,sibling4_food_allergy,HRAD_first_year,AD_first_year,FA_first_year,ABX_fisrt_year, number_of_ABX_first_year,vaccine_12mo,nursing_setup_at_12mo,daycare_24month,vaccines_24month,food_allergy_24_month,inhalation_24_month,number_inhalation,prevention_therapy,AD_24_month,AD_treatment_24_month,steroids_treatment24,number_steroid_treat,chronic_rhinitis_24_month,ABX_treatment_24_months,number_ABX_treatment_24_months,hospitalization_24_months,chronic_disease_24,month_survey_complete,family_Atopic_diseases_sum,mother_Atopic_diseases_sum,father_Atopic_diseases_sum,sibling_Atopic_diseases_sum, family_Atopic_diseases,mother_Atopic_diseases,father_Atopic_diseases,sibling_Atopic_diseases,is_atopic_first_year,is_atopic_second_year,covid_time)
 
 ```
 
 
+ֹ
 
 
+# continues exploratoty variables - DOB Vs Atopic deasese 
+
+```{r, warning=F}
+exloretory_variables = list('AD_first_year', 'AD_24_month', 'FA_first_year', 'food_allergy_24_month', 'ABX_fisrt_year', 'inhalation_24_month', 'is_atopic_first_year', 'is_atopic_second_year')
+
+DOB_explanatory <- function(kpi){
+  return (ggplot(df, aes(x=DOB, group = as.factor(df[[kpi]]), fill=as.factor(df[[kpi]]))) + geom_density(adjust=1.5, alpha=.4) + ggtitle(kpi))}
+lapply(exloretory_variables, DOB_explanatory)
+
+```
+
+# Continues exploratoty VS Categoty exploratoty
+```{r, warning=F}
+Categoric_variables <- c('SES', 'Jew/Arab', 'gender', 'study_group_COMEET', 'mother_education', 'number_of_children', 'preganancy_number', 'type_of_pregnancy', "family_Atopic_diseases", "mother_Atopic_diseases", "father_Atopic_diseases", "sibling_Atopic_diseases" )
+
+DOB_explanatory_dist <- function(kpi){
+  return (ggplot(df, aes(x=DOB, group = as.factor(df[[kpi]]), fill=as.factor(df[[kpi]]))) + geom_density(adjust=1.5, alpha=.4) + ggtitle(kpi))}
+lapply(Categoric_variables , DOB_explanatory_dist)
+
+DOB_explanatory_dist <- function(kpi){
+  return (ggplot(df, aes(x=DOB, group = as.factor(df[[kpi]]), fill=as.factor(df[[kpi]]))) + geom_boxplot(adjust=1.5, alpha=.4) + ggtitle(kpi))}
+lapply(Categoric_variables , DOB_explanatory_dist)
+```
+
+# Categoty exploratoty VS Categoty exploratoty
+```{r, warning=F}
+SES_category <- function(kpi){
+  return (ggplot(df, aes(SES, fill=as.factor(df[[kpi]]))) + geom_bar(adjust=1.5) + ggtitle(paste0(kpi, ' vs. SES')))}
+lapply(Categoric_variables , SES_category)
+
+gender_category <- function(kpi){
+  return (ggplot(df, aes(gender, fill=as.factor(df[[kpi]]))) + geom_bar(adjust=1.5) + ggtitle(paste0(kpi, ' vs. gender')))}
+lapply(Categoric_variables , gender_category)
+
+mother_education_category <- function(kpi){
+  return (ggplot(df, aes(mother_education, fill=as.factor(df[[kpi]]))) + geom_bar(adjust=1.5) + ggtitle(paste0(kpi, ' vs. mother_education')))}
+lapply(Categoric_variables , mother_education_category)
+
+family_Atopic_diseases_category <- function(kpi){
+  return (ggplot(df, aes(family_Atopic_diseases, fill=as.factor(df[[kpi]]))) + geom_bar(adjust=1.5) + ggtitle(paste0(kpi, ' vs. family_Atopic_diseases')))}
+lapply(Categoric_variables , family_Atopic_diseases_category)
 
 
+```
 
 
 # Regressions
